[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/admin/invite_management_dialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="create_btn_normal"]
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="InviteManagementDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(460, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invites"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
text = "✕"
flat = true

[node name="SearchInput" type="LineEdit" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
placeholder_text = "Search..."

[node name="Scroll" type="ScrollContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="InviteList" type="VBoxContainer" parent="CenterContainer/Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BulkBar" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectAllCheck" type="CheckBox" parent="CenterContainer/Panel/VBox/BulkBar"]
layout_mode = 2
text = "Select All"

[node name="Spacer" type="Control" parent="CenterContainer/Panel/VBox/BulkBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BulkRevokeBtn" type="Button" parent="CenterContainer/Panel/VBox/BulkBar"]
visible = false
layout_mode = 2
text = "Revoke Selected"
flat = true
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)

[node name="EmptyLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
text = "No invites."
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="CreateToggle" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Create Invite"
theme_override_styles/normal = SubResource("create_btn_normal")

[node name="CreateForm" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="MaxAgeLabel" type="Label" parent="CenterContainer/Panel/VBox/CreateForm"]
layout_mode = 2
text = "EXPIRE AFTER"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="MaxAgeOption" type="OptionButton" parent="CenterContainer/Panel/VBox/CreateForm"]
layout_mode = 2

[node name="MaxUsesRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox/CreateForm"]
layout_mode = 2

[node name="MaxUsesLabel" type="Label" parent="CenterContainer/Panel/VBox/CreateForm/MaxUsesRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max uses (0 = unlimited)"

[node name="MaxUsesSpin" type="SpinBox" parent="CenterContainer/Panel/VBox/CreateForm/MaxUsesRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)

[node name="TemporaryRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox/CreateForm"]
layout_mode = 2

[node name="TemporaryCheck" type="CheckBox" parent="CenterContainer/Panel/VBox/CreateForm/TemporaryRow"]
layout_mode = 2
text = "Temporary membership"

[node name="TemporaryInfo" type="Label" parent="CenterContainer/Panel/VBox/CreateForm/TemporaryRow"]
layout_mode = 2
text = "ⓘ"
tooltip_text = "Members who join via this invite are kicked when they disconnect, unless they are assigned a role first."
mouse_filter = 0
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 14

[node name="CreateButton" type="Button" parent="CenterContainer/Panel/VBox/CreateForm"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Create"
theme_override_styles/normal = SubResource("create_btn_normal")

[node name="ErrorLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
autowrap_mode = 2
